# youtube-summary

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md
src/: anthropic.rs  cli.rs  config.rs  error.rs  main.rs  openrouter.rs  transcript.rs
