[package]
name = "youtube-summary"
version = "0.1.0"
edition = "2024"

[dependencies]
yt-transcript-rs = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
